fix script path for github pages
Fix script tag syntax and add module type for main.js.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<script>
+<script<script type="module" src="./main.js"></script>
   const supabaseUrl = "https://bgwzbvsdnwcxxwumajmv.supabase.co";
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJnd3pidnNkbndjeHh3dW1ham12Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA3Nzk0NjEsImV4cCI6MjA4NjM1NTQ2MX0.vRolcotzWkeWY8mcjzpSihAkY325pRUg0TkdCU-wTkU";
 
